# focus-passion

./: .env.example  .gitignore  Cargo.toml  Plan.txt  Procfile  README.md  Rocket.toml  index.html  vercel.json
.github/workflows/: rust.yml
mongodb/: compose.yml
src/: db.rs  main.rs  models.rs
src/api/: private.rs  public.rs
static/: cookies.js  style.css  uuid.js  uuid.ts
templates/: index.html.tera  modal.html.tera  modals.html.tera  new_task.html.tera  overlay.html.tera  search.html.tera  style.css  task_checkbox.html.tera  task_item.html.tera
templates/fragments/: add_task_response.html.tera  search_response.html.tera  tasks_view.html.tera
templates/modal/: modal.html.tera  overlay.html.tera  task_checkbox.html.tera
tests/: explanation.txt
tests/checkbox/: css.txt  html.txt
