[package]
name = "focus-passion"
version = "0.1.0"
edition = "2024"
root="./"

[dependencies]
env = "1.0.1"
mongodb = "3.5.2"
rocket = "0.5.1"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
